* Thu Nov 30 2017 Steven Pritchard <steven.pritchard@onyxpoint.com> - 6.1.2-0
- Update README.md from puppet strings

* Thu Oct 26 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Retain output database upon AIDE database update for SCAP
  Security Guide OVAL check
  xccdf_org.ssgproject.content_rule_aide_build_database

* Tue Sep 05 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
- Fixed bug whereby aide reports/errors were not being sent to syslog.
  AIDE can now be configured to report to syslog, itself.
- Use FIPS-appropriate hash algorithms when in FIPS mode
- No longer hide AIDE initialization failures (which are primarily
  configuration errors) when a manifest with the aide class is applied.
- Improved acceptance tests.
- Commented out SUSE acceptance test node, as the node configuration
  is broken.

* Wed Apr 19 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.1-0
- Updated logrotate to use new lastaction API
- Confine puppet version in metadata.json

* Wed Jan 25 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Updated calls to aide::rule and auditd::rule

* Tue Dec 13 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Strong typed the module.

* Wed Dec 07 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Updated catalysts to take defaults from simp_options

* Wed Nov 23 2016 Jeanne Greulich <jgreulich@onypoint.com> - 5.0.0-2016
- Bump major version for SIMP 6

* Fri Nov 18 2016 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.3-0
- Removed compliance map dependency

* Tue May 17 2016 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.1-0
- Sanitize code for `STRICT_VARIABLES=yes`

* Thu Mar 10 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-10
- Updated for Puppet 4 compatibility

* Wed Feb 10 2016 Ralph Wright <ralph.wright@onypoint.com> - 4.1.0-9
- Added compliance function support

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-8
- migration to simplib and simpcat (lib/ only)
