@@ -1,12 +1,12 @@
 HOSTS:
-  el6:
+  oel6:
     roles:
       - server
       - default
       - master
       - client
     platform: el-6-x86_64
-    box: centos/6
+    box: elastic/oel-6-x86_64
     hypervisor: vagrant
     repos:
       simp:
@@ -14,11 +14,11 @@ HOSTS:
         gpgkeys:
           - https://raw.githubusercontent.com/NationalSecurityAgency/SIMP/master/GPGKEYS/RPM-GPG-KEY-SIMP
           - https://getfedora.org/static/0608B895.txt
-  el7:
+  oel7:
     roles:
       - client
     platform: el-7-x86_64
-    box: centos/7
+    box: elastic/oel-7-x86_64
     hypervisor: vagrant
     repos:
       simp:
@@ -31,4 +31,5 @@ CONFIG:
   log_level: verbose
   synced_folder : disabled
   type: aio
+  puppet_collection: puppet5
   vagrant_memsize: 256
