@@ -1,3 +1,6 @@
+* Sun Mar 04 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.3-0
+- Tested against Puppet 5 and Oracle Linux
+
 * Thu Nov 30 2017 Steven Pritchard <steven.pritchard@onyxpoint.com> - 6.1.2-0
 - Update README.md from puppet strings
 
